# ser

./: CMakeLists.txt  run_tests.sh
src/: traits.hpp
src/binary/: deserializer.hpp  deserializer.tpp  serializer.hpp  serializer.tpp
tests/: CMakeLists.txt
tests/binary/: CMakeLists.txt  test_deserializer.cpp  test_integration.cpp  test_serializer.cpp
